Fix:background, mobile hover, chose sort, overflow

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -10,11 +10,11 @@
 	background: linear-gradient(0deg, rgba(17, 17, 20, 1) 0%, rgba(65, 65, 74, 1) 50%, rgba(17, 17, 20, 1) 100%);
 }
 
-@mixin borderBottom() {
+@mixin borderBottom($width: 100%) {
 	content: "";
 	position: absolute;
 	height: 1px;
-	width: 100%;
+	width: $width;
 	bottom: 0;
 	left: 50%;
 	transform: translateX(-50%);
