--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,8 +8,8 @@ body {
 
 .container {
 	max-width: 1060px;
-	width: 100%;
-	height: 100%;
+	//width: 100%;
+	//height: 100%;
 	margin: 0 auto;
 	padding: 0 10px;
 	position: relative;
@@ -45,6 +45,15 @@ body {
 		height: auto;
 		width: 15px;
 	}
+	&__header {
+		&_p {
+			font-size: 14px;
+			margin-top: 20px;
+		}
+		&_title {
+			margin-left: 30px;
+		}
+	}
 }
 
 .logo {
@@ -55,6 +64,7 @@ body {
 	&__header {
 		height: auto;
 		max-width: 100%;
+		padding: 0 20px;
 	}
 	&__bonus {
 		margin-left: 5px;
@@ -62,6 +72,9 @@ body {
 	}
 	&__choose {
 		margin-left: 5px;
+	}
+	&__footer {
+		margin: 0 10px;
 	}
 }
 
@@ -101,18 +114,10 @@ body {
 		background-color: $footer-header;
 		box-shadow: inset 0px 10px 10px -10px rgba(0, 0, 0, 1), inset 0px -10px 10px -10px rgba(0, 0, 0, 1);
 	}
-	&__title {
-		font-size: 18px;
-		margin-left: 30px;
-	}
 	&__intro {
 		max-width: 980px;
 		margin-left: 50px;
 		margin-right: 30px;
-	}
-	&__p {
-		font-size: 14px;
-		margin-top: 20px;
 	}
 }
 
@@ -163,6 +168,10 @@ body {
 		& > img {
 			margin: 10px;
 		}
+		&_4 {
+			overflow: hidden;
+			flex-wrap: nowrap;
+		}
 	}
 	&__mobileIcons {
 		display: none;
@@ -183,7 +192,7 @@ body {
 		display: flex;
 		align-self: center;
 		flex-direction: column;
-		width: 35px;
+		min-width: 35px;
 		height: 22px;
 		padding-top: 3px;
 		font-size: 10px;
@@ -268,8 +277,6 @@ body {
 		}
 	}
 	&__text {
-		font-size: 18px;
-		font-weight: 400;
 		margin: 5px 0;
 		&_active {
 			font-weight: 700;
@@ -368,9 +375,6 @@ body {
 		&:hover {
 			padding-top: 10px;
 			max-height: 40px;
-			& .logo__bonus {
-				transform: rotate(180deg);
-			}
 		}
 		&__active {
 			box-shadow: none;
@@ -397,25 +401,34 @@ body {
 }
 
 .footer {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-wrap: wrap-reverse;
-	width: 100%;
 	padding: 20px 20px;
 	background-color: $footer-header;
 	box-shadow: inset 0px 10px 10px -10px rgba(0, 0, 0, 1);
+	&__content {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+
+		//width: 100%;
+	}
 	&__text {
-		margin-left: 40px;
-		margin-top: 20px;
-		margin-bottom: 20px;
-		max-width: 772px;
+		//margin-left: 40px;
+		max-width: 80%;
+		margin: 20px 0;
+		//max-width: 772px;
+	}
+	&__contacts {
+		display: flex;
+		margin-top: 10px;
+		justify-content: center;
 	}
 	&__p {
 		font-size: 14px;
 	}
 }
-//!POPUP
+
+/* popup */
+
 .overlay {
 	height: 0;
 	width: 100%;
@@ -538,7 +551,7 @@ body {
 		flex-wrap: wrap;
 		height: fit-content;
 		width: 100%;
-		margin-bottom: 20px;
+		margin-bottom: 15px;
 		& > img {
 			margin: 5px 10px;
 		}
@@ -593,10 +606,10 @@ body {
 	&__textWithIcons {
 		display: flex;
 		align-items: center;
-		flex: 0 0 100px;
-		margin-left: 10px;
+		// flex: 0 0 100px;
+		// margin-left: 10px;
 		&:first-child {
-			flex: 1;
+			//flex: 1;
 			overflow: hidden;
 			margin: 0;
 			& > p {
@@ -614,7 +627,11 @@ body {
 			margin-right: 10px;
 		}
 		&_disabled {
-			filter: contrast(0) url(#disabled);
+			& > img,
+			& > p,
+			& > div {
+				filter: url(#white) url(#disabled);
+			}
 		}
 		&_first {
 			justify-content: center;
@@ -661,6 +678,27 @@ body {
 }
 
 /* Responsive */
+@media screen {
+	.bonus__btn {
+		&:hover {
+			padding-top: 0;
+			max-height: none;
+		}
+		&__active {
+			max-height: none;
+			padding-top: 0;
+			&:hover {
+				max-height: none;
+			}
+		}
+	}
+}
+
+@media screen and (max-width: 1500px) {
+	.main {
+		background: none;
+	}
+}
 
 @media screen and (max-width: 992px) {
 	.container {
@@ -674,6 +712,10 @@ body {
 				display: none;
 			}
 		}
+	}
+	.footer__content {
+		flex-wrap: wrap-reverse;
+		justify-content: center;
 	}
 }
 
@@ -690,11 +732,31 @@ body {
 		&__mobileText {
 			display: block;
 			text-align: start;
-			margin-bottom: 12px;
+			margin-bottom: 0px;
 		}
 		&__iconsGrid {
-			width: auto;
-			justify-content: center;
+			flex-wrap: nowrap;
+			justify-content: flex-start;
+			overflow: hidden;
+			position: relative;
+			&:before {
+				content: "";
+				position: absolute;
+				top: 0;
+				right: 0;
+				background: linear-gradient(90deg, rgba(17, 17, 20, 0) 0%, rgba(17, 17, 20, 1) 100%);
+				width: 20px;
+				height: 43px;
+			}
+			&:nth-child(1) {
+				width: auto;
+			}
+			&_4 {
+				width: auto;
+				max-width: 100%;
+				position: relative;
+				//justify-content: center;
+			}
 		}
 		&__more {
 			top: 15px;
@@ -756,10 +818,10 @@ body {
 			display: block;
 			order: 5;
 			width: 260px;
-			.bar {
-				&__textWithIcons {
-					order: 2;
-				}
+			.bar__bets {
+				display: flex;
+				flex-direction: column-reverse;
+				align-items: center;
 			}
 		}
 	}
@@ -843,6 +905,32 @@ body {
 	.container {
 		max-width: 540px;
 	}
+	.bar {
+		&__item {
+			margin-bottom: 15px;
+			&:nth-child(2) {
+				padding: 0 0 15px;
+				position: relative;
+				&:after {
+					@include borderBottom(100px);
+					top: 100%;
+				}
+			}
+			&:nth-child(3) {
+				.bar__bets {
+					height: auto;
+				}
+			}
+			&:nth-child(4) {
+				margin-bottom: 0;
+				width: 100%;
+				& > p {
+					width: 260px;
+					margin: 0 auto;
+				}
+			}
+		}
+	}
 	.detailedBar__ways_output .detailedBar__tableField {
 		justify-content: flex-end;
 		&:not(:first-child) img,
@@ -854,6 +942,12 @@ body {
 		&__tableField {
 			&_first {
 				justify-content: space-between;
+			}
+			&_disabled {
+				& > img,
+				& > p {
+					filter: none;
+				}
 			}
 		}
 		&__ways {
@@ -872,6 +966,13 @@ body {
 		&__profit > h1,
 		&__profit .afterField {
 			margin-top: 10px;
+		}
+		&__textWithIcons {
+			flex: 0 0 100px;
+			margin-left: 10px;
+			&:first-child {
+				flex: 1;
+			}
 		}
 	}
 }
